--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,73 @@
     margin: 30px;
     padding: 40px; 
 }
+
+
+
+.header {
+    width: 100%;
+    height: 50px;
+    background-color: aquamarine;
+}
+.left-menu{
+    width: 20%;
+    height: 400px;
+    background-color: cornflowerblue;
+    /* float: left; 왼쪽 스타일링 */
+    display: inline-block; 
+    vertical-align: bottom;
+}
+
+.right{
+    width: 80%;
+    height: 400px;
+    background: coral;
+    display: inline-block;
+}
+
+.footer{
+    width: 100%;
+    height: 100px;
+    background-color: gray;
+    /* clear: both; float 기능 삭제*/
+}
+
+/* ------------------------------ */
+
+.container {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.blog-content{
+    width: 80%;
+    height: 200px;
+    background: #eee;
+    float: left;
+}
+.bolg-img{
+    width: 20%;
+    height: 200px;
+    background: yellow;
+    float: left;
+}
+
+.blog-name{
+    float: left;
+    
+}
+
+
+.navbar li{
+    display: inline-block;
+    width: 60px;
+    text-align: center;
+    background: #eee;
+    padding: 10px;
+    border-radius: 5px;
+   
+}
+.navbar li a{
+    font-size: 16px;
+    text-decoration: none;
+}
