--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-div{
+div,input,textarea {
     box-sizing: border-box;
 }
 
@@ -10,6 +10,66 @@ html{
     line-height: 1.15; 
     /* 기본 행간 높이 */
 }
+
+
+
+.form-background{
+    background-color: black;
+    padding: 30px;
+}
+.form-white{
+    background-color: white;
+    padding: 30px;
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+}
+.form-input{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+  
+}
+.w-100{
+    width: 100%;
+    padding: 10px;
+}
+.w-50{
+    width: 50%;
+    float: left;
+    padding: 10px;
+}
+
+.yellow-button{
+    padding:10px;
+    display: block;
+    margin-left: auto;
+}
+.text-input{
+    padding: 10px;
+    font-size: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.input-box{
+    border: 2px solid black;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.input-textarea{
+    padding: 50px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+.input-name{
+    display: flex;
+    gap:100px;
+}
+
 
 .main-background {
     width: 100%;
