--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,85 @@
+@font-face {
+    font-family: '이쁜폰트';
+    src: url(../font/NanumSquareAcEB.woff);
+    
+}
+
 div,input,textarea {
     box-sizing: border-box;
 }
 
 body{
     margin: 0px;
+    font-family: '이쁜폰트';
 }
 
-html{
-    line-height: 1.15; 
-    /* 기본 행간 높이 */
+
+.test{
+    width: 100vw;
+    height: 100px;
+    background: gray;
 }
+
+
+
+
+
+
+.nav-container{
+    display: flex;
+    height: 40px;
+    align-items: center;
+  
+    padding: 5px;
+}
+
+.nav-item{
+    margin-right: 5px;
+}
+
+
+
+
+
+
+
+
+
+.flex-container{
+    display: flex;
+    /* 가운데 정렬 */
+    flex-direction: row;
+}
+
+
+.flex-item{
+    width: 100%;
+    height: 100px;
+    background-color: grey;
+    margin: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
