--- a/css/qwer3.css
+++ b/css/qwer3.css
@@ -11,7 +11,6 @@ button{
 .hd-box{
     display: flex;
     justify-content: space-between;
-    
     width: 100%;
     height: 200px;
     background-color: white;
@@ -34,6 +33,15 @@ button{
 }
 
 .hd-right{
-    flex: 1;
-    max-width: 0%;  /* 최대 너비 설정 */
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    padding-left: 20px;
+    border-left: 2px solid #ddd;  /* ✨ 세로선 추가 */
+}
+
+.hd-right .row {
+    max-width: 400px;  /* ✨ row의 최대 너비 제한 */
+    width: 100%;  /* 부모 요소 크기에 맞춤 */
+    margin: 0 auto;  /* 가운데 정렬 */
 }
